# Sym

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: SymConfig.cmake.in
include/Sym/: Expression.h
tests/: test_sym.cpp
